maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:4: error: not found: value &&
  if (!aMurNord(x,y+1) && getIndication(x,y+1)>i+1) && y+1<=getMondeHauteur()-1{
                                                    ^JediEscaper:4: error: Int(1) does not take parameters
  if (!aMurNord(x,y+1) && getIndication(x,y+1)>i+1) && y+1<=getMondeHauteur()-1{
                                                                               ^JediEscaper:9: error: not found: value &&
  if (!aMurNord(x,y) && getIndication(x,y-1)>i+1) && y+1>=0{
                                                  ^JediEscaper:9: error: Int(0) does not take parameters
  if (!aMurNord(x,y) && getIndication(x,y-1)>i+1) && y+1>=0{
                                                           ^JediEscaper:13: error: not found: value &&
  if (!aMurOuest(x,y) && getIndication(x-1,y)>i+1) && x-1>=0{
                                                   ^JediEscaper:13: error: Int(0) does not take parameters
  if (!aMurOuest(x,y) && getIndication(x-1,y)>i+1) && x-1>=0{
                                                            ^JediEscaper:17: error: not found: value &&
  if (!aMurOuest(x+1,y) && getIndication(x+1,y)>i+1) && x+1 <=getMondeLargeur()-1 {
                                                     ^JediEscaper:17: error: Int(1) does not take parameters
  if (!aMurOuest(x+1,y) && getIndication(x+1,y)>i+1) && x+1 <=getMondeLargeur()-1 {
                                                                                  ^